tests/regression/errors/shadow_label.eff
type cow = Horn of int
type bull = Tail of string | Horn of bull
